fix: adjust positioning and alignment in FeedbackSection for better layout on tablet

--- a/src/components/FeedbackSection/FeedbackSection.module.scss
+++ b/src/components/FeedbackSection/FeedbackSection.module.scss
@@ -35,6 +35,7 @@
   left: 10%;
 
   @media (max-width: $breakpoint-tablet) {
+    top: 92px;
     left: 10px;
     transform: rotate(305deg);
   }
@@ -91,6 +92,6 @@
   }
 
   .feedbackImgContainer {
-    right: -6dvw;
+    right: -80px;
   }
 }
